_letter-spacing bug fix

--- a/src/scss/plugins/_letter-spacing.scss
+++ b/src/scss/plugins/_letter-spacing.scss
@@ -7,7 +7,7 @@ $letter-spacing:(
             name: letter-spacing,
             class: null,
             list:(
-                normal: 0em,
+                normal: 0,
                 xs: 0.01em,
                 sm: 0.02em,
                 md: 0.03em,
